--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,20 @@
 [tox]
-envlist=benchmark,test,examples,doc
+envlist=
+	benchmark,
+	{py27,py36},
+	examples,
+	doc
+
+[testenv]
+basepython =
+	py27: {env:TOXPYTHON:python2.7}
+	py36: {env:TOXPYTHON:python3.6}
+	{benchmark,examples,doc}: {env:TOXPYTHON:python3.6}
+deps=
+    -r{toxinidir}/test-requirements.txt
+    -r{toxinidir}/requirements.txt
+commands=
+    pytest
 
 [testenv:benchmark]
 deps=
@@ -16,13 +31,6 @@ whitelist_externals=doxygen
 commands=
     doxygen Doxyfile
     sphinx-build -W -b html . {envtmpdir}/examples/_build
-
-[testenv:test]
-deps=
-    -r{toxinidir}/test-requirements.txt
-    -r{toxinidir}/requirements.txt
-commands=
-    pytest
 
 [testenv:doc]
 deps=
